Use UserWorkAreaBounds for calculating tray size

This should fix the size of trays when the docked content is above the
desktop (eg. docked magnifier, spoken feedback, etc...)

Bug: 824077
Test: manual
Change-Id: Iecccb721b14a2ffde045a87993d4951cd677efa4
Reviewed-on: https://chromium-review.googlesource.com/981846
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546078}
Former-commit-id: 88da69d375fa2fef861d2fee14274e042df95b46